--- a/animated-GB.css
+++ b/animated-GB.css
@@ -139,6 +139,7 @@ footer{
   gap: 5px;
   border: 3px;
 }
+/* footer */
 footer{
   background-image: url(https://cdn.dribbble.com/users/37746/screenshots/1566922/graph1.gif);
   margin: auto;
